# energy-dashboard

./: .gitignore  README copy.md  README.md  main.py  pyproject.toml  secrets.env
common/: pom.xml
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/kubernetes/: development.yaml  service.yaml
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
frontend/src/app/github/: github-routing.module.ts  github.module.ts  github.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
github-service/: README.md  pom.xml
github-service/kubernetes/: deployment.yaml  service-ingress.yaml  service.yaml
github-service/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
github-service/src/main/resources/: application.properties
github-service/src/test/resources/: application.properties
news-service/: README.md  pom.xml
news-service/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/energy_dashboard/: app.py  chart.py  database.py  fast_api.py  llm.py  main.py  models.py  routes.py  services.py  sql_alchemy.py
src/energy_dashboard/templates/: fast_api.jinja2  index.jinja2  instruct.jinja2  layout.jinja2
src/energy_dashboard/templates/partials/: form.jinja2  navbar.jinja2  sse.jinja2  (+1 more)
src/energy_dashboard_rye/: __init__.py
task-service/: README.md  pom.xml
terraform-cdk/: Pipfile  cdktf.json  main.py
(+20 files in other folders)
