[project]
name = "energy-dashboard-rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Achille", email = "134864742+traliach@users.noreply.github.com" }
]
dependencies = [
    "cdktf>=0.20.7",
    "azure-cosmos>=4.7.0",
    "azure-mgmt-compute>=31.0.0",
    "azure-mgmt-resource>=23.1.1",
    "azure-identity>=1.16.0",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/energy_dashboard_rye"]
